# ai-project

./: README.md  ai-avatar-hairstyle-generator-source.html  ai-avatar-hairstyle-generator.html  ai-background-changer-source.html  ai-background-changer.html  ai-coloring-book-for-kids-source.html  ai-coloring-book-for-kids.html  ai-expression-generator-source.html  ai-expression-generator.html  ai-group-photo-generator-source.html  ai-group-photo-generator.html  ai-pdf-summarizer-source.html  ai-pdf-summarizer.html  ai-profile-picture-stylist-source.html  ai-profile-picture-stylist.html  ai-recipe-generator-source.html  ai-recipe-generator.html  ai-storybook-generator-source.html  ai-storybook-generator.html  back-to-school-campaign-source.html  back-to-school-campaign.html  badminton-booking-agent-source.html  badminton-booking-agent.html  bahai-chinese-translation-workbench-source.html  bahai-chinese-translation-workbench-zh.html  bahai-chinese-translation-workbench.html  banana-lab-source.html  banana-lab.html  bloom-house-concierge-source.html  bloom-house-concierge.html  bookshelf-source.html  bookshelf.html  borrower-risk-evaluator-source.html  borrower-risk-evaluator.html  bright-path-tuition-source.html  bright-path-tuition.html  business-intelligent-agent-source.html  business-intelligent-agent.html  car-rental-booking-agent-source.html  car-rental-booking-agent.html  (+146 more)
projects/bookshelf/: .env.example  README.md  demo.html  pyproject.toml  start.bat  stop.bat
projects/bookshelf/app/: main.py
projects/bookshelf/dataset/: dataset-sample-150.csv
(+755 files in other folders)
